# ucrstar

./: .gitignore  README.md  pyproject.toml  starlet_api.md  ucrstar.config.template.json  ucrstar2.config.template.json
src/ucrstar/: app.py  assistant_style.py  assistant_tools.py  catalog.py  chat.py  cli.py  config.py  esri_hub.py  llm.py  sources.py
src/ucrstar/static/: app.js  index.css  index.html  index.js  styles.css  view_mvt.css  view_mvt.html  view_mvt.js
src/ucrstar2/: TODO  __init__.py  app.py  catalog.py  cli.py  config.py  esri_hub.py  llm.py  sources.py
src/ucrstar2/static/: app.js  styles.css  view_mvt.css  view_mvt.html  view_mvt.js
tests/: test_app.py  test_assistant.py  test_catalog.py  test_chat.py  test_cli.py  test_esri_hub.py  test_llm.py  test_sources.py
