[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ucrstar"
version = "0.1.0"
description = "Flask backend for exploring Starlet geospatial datasets."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "starlet",
    "numpy",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
ucrstar = "ucrstar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
